# lecture-25-Mav8r1ck

./: CLion Library Guide.docx  Lecture 25. Strings.pptx
CW25/: CMakeLists.txt  main.c
CW25_lib/: CMakeLists.txt  library.c  library.h
